--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^2.5.21",
+    "vue-meta": "^1.5.8",
     "vue-router": "^3.0.2"
   },
   "devDependencies": {
