--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "kute.js": "^1.6.6",
     "vue": "^2.5.21",
     "vue-meta": "^1.5.8",
     "vue-router": "^3.0.2"
