--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "jquery": "^3.3.1",
     "kute.js": "^1.6.6",
     "vue": "^2.5.21",
     "vue-meta": "^1.5.8",
