--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "aos": "^2.3.4",
     "gsap": "^2.1.2",
+    "install": "^0.12.2",
     "kute.js": "^1.6.6",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "rellax": "^1.8.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
