--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "install": "^0.12.2",
     "kute.js": "^1.6.6",
     "nuxt": "^2.0.0",
-    "rellax": "^1.8.0"
+    "rellax": "^1.8.0",
+    "vue-lazyload": "^1.2.6"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
